--- a/about.ui
+++ b/about.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>388</width>
-    <height>305</height>
+    <width>300</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>About Creator</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
