--- a/help.ui
+++ b/help.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>287</width>
-    <height>389</height>
+    <width>300</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>How to use</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
