--- a/license.ui
+++ b/license.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>331</width>
-    <height>300</height>
+    <width>300</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>See the license</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
