--- a/about.ui
+++ b/about.ui
@@ -32,7 +32,7 @@ p, li { white-space: pre-wrap; }
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="goTOGIthub">
+      <widget class="QPushButton" name="goToGithub">
        <property name="statusTip">
         <string>Close license</string>
        </property>
