Connect extract files action
Connect extract files from folder  action.
When clicked 'Extract' button, files move to destination.

--- a/ext_files_dir.ui
+++ b/ext_files_dir.ui
@@ -40,6 +40,13 @@
      </layout>
     </item>
     <item>
+     <widget class="QPushButton" name="loadFileList">
+      <property name="text">
+       <string>Load file list</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QTextBrowser" name="listFiles"/>
     </item>
     <item>
