Implement Error of Extract aciton
Implement Error dialog of Extract aciton.

--- a/myres.qrc
+++ b/myres.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="icon">
+    <file>img/error.png</file>
     <file>img/about_creator.png</file>
     <file>img/exit.png</file>
     <file>img/help.png</file>
