Revise button name and help
Revise button name and help.

--- a/ext_files_dir.ui
+++ b/ext_files_dir.ui
@@ -42,7 +42,7 @@
     <item>
      <widget class="QPushButton" name="loadFileList">
       <property name="text">
-       <string>Load file list</string>
+       <string>Load list</string>
       </property>
      </widget>
     </item>
