--- a/about.ui
+++ b/about.ui
@@ -24,7 +24,8 @@ p, li { white-space: pre-wrap; }
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Hi! Thank you for using my &lt;/span&gt;&lt;span style=&quot; font-family:'Consolas,  Menlo, Monaco,  Courier New , monospace,Consolas,Courier New,monospace'; font-size:12pt; font-weight:600; color:#000000;&quot;&gt;Extracting Files from Directory&lt;/span&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;.&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;This is my first Qt Application.&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;I'm Lyuhitto who create this app.&lt;/span&gt;&lt;/p&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;If you want to see my other programms, &lt;/span&gt;&lt;a href=&quot;https://github.com/Lyuhitto&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;check my Github!&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;If there is a bug, please contact &lt;/span&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;liany0616@gmail.com&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;If you want to see my other programs, &lt;/span&gt;&lt;a href=&quot;https://github.com/Lyuhitto&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;feel free to visit my Github!&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Have a good day!&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
@@ -40,8 +41,8 @@ p, li { white-space: pre-wrap; }
         <string>Go to Github</string>
        </property>
        <property name="icon">
-        <iconset>
-         <normaloff>img/about_creator.png</normaloff>img/about_creator.png</iconset>
+        <iconset resource="myres.qrc">
+         <normaloff>:/icon/img/about_creator.png</normaloff>:/icon/img/about_creator.png</iconset>
        </property>
       </widget>
      </item>
@@ -56,6 +57,8 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="myres.qrc"/>
+ </resources>
  <connections/>
 </ui>
